# click-battler

./: Cargo.toml  README.md
src/: client.rs  game.rs  main.rs
static/: index.html
static/script/: index.js
