[package]
name = "click-battler"
version = "0.1.0"
authors = ["David LeGare <dlegare.1001@gmail.com>"]
edition = "2018"

[dependencies]
futures-preview = { version = "=0.3.0-alpha.18", features = ["compat", "async-await", "nightly"] }
handlebars = "1.0.0"
log = "0.4.8"
env_logger = "0.6.2"
runtime = { git = "https://github.com/rustasync/runtime" }
runtime-tokio = { git = "https://github.com/rustasync/runtime" }
serde_derive = "1.0"
warp = "0.1.19"
